--- a/style.css
+++ b/style.css
@@ -1,13 +1,17 @@
 body {
     background-color: lightblue;
-    }
-    
-    h1 {
+}
+
+h1 {
     color: white;
     text-align: center;
-    }
-    
-    p {
+}
+
+pre{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+p {
     font-family: verdana;
-    font-size: 20px;
-    }
+    font-size: 16px;
+}
