--- a/style.css
+++ b/style.css
@@ -7,11 +7,19 @@ h1 {
     text-align: center;
 }
 
-pre{
+hr {
+    border-style:groove;
+}
+h2 {
+    color: rgb(142, 72, 11);
+}
+
+pre {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 14px;
 }
 
 p {
     font-family: verdana;
-    font-size: 16px;
+    font-size: 14px;
 }
